[package]
name = "ohkami-tracing-req"
version = "0.24.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2024"
rust-version = "1.88.0"
description = "ohkami middleware to trace requests"
readme = "README.md"
repository = "https://github.com/DoumanAsh/ohkami-tracing-req"
license = "BSL-1.0"
keywords = ["tracing", "http", "tower", "middleware", "opentelemetry"]
categories = ["asynchronous", "network-programming", "web-programming"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies.uuid]
version = "1"
default-features = false
features = ["v4"]

[dependencies.tracing]
version = "0.1"
default-features = false

[dependencies.ohkami]
version = "0.24"
default-features = false
